--- a/.htaccess
+++ b/.htaccess
@@ -1,10 +1,4 @@
-<Files ~ "^\.(htaccess|htpasswd)$">
-deny from all
-</Files>
-Options -Indexes
-AuthUserFile .htpasswd
-AuthGroupFile /dev/null
-AuthName "Please enter your ID and password"
 AuthType Basic
-require valid-user 
-order deny,allow
+AuthName "Test Web"
+AuthUserFile /.htpasswd
+require valid-user
